--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/image": "^1.0.0-rc.1",
     "@types/node": "^18.16.19",
     "nuxt": "^3.6.3",
     "nuxt-quasar-ui": "^2.0.4"
